style.css
/*
 Theme Name:   ProGo Base
 Theme URI:    https://github.com/progothemes/pgb
 Description:  ProGo Base is WordPress, Underscores, Bootstrap, Theme Hook Alliance, get-out-the-way-lemme-do-it all-in-one "Theme Framework".
 Author:       ProGo
 Author URI:   http://www.progo.com
 Version:      0.4
 License:      GPLv2 or later
 License URI:  http://www.gnu.org/licenses/gpl-2.0.html
 Tags:         bootstrap, custom-colors, custom-header, custom-menu, featured-images, full-width-template, light, post-formats, responsive-layout, theme-options
*/

/* imported font League Gothic */
/* Regular */
@font-face {
    font-family: 'League Gothic';
    src: url('includes/webfonts/leaguegothic-italic-webfont.eot');
    src: url('includes/webfonts/leaguegothic-italic-webfont.eot?#iefix') format('embedded-opentype'),
         url('includes/webfonts/leaguegothic-italic-webfont.woff') format('woff'),
         url('includes/webfonts/leaguegothic-italic-webfont.ttf') format('truetype'),
         url('includes/webfonts/leaguegothic-italic-webfont.svg#league_gothic_italicregular') format('svg');
    font-weight: normal;
    font-style: italic;
}

/* Italic */
@font-face {
    font-family: 'League Gothic';
    src: url('includes/webfonts/leaguegothic-regular-webfont.eot');
    src: url('includes/webfonts/leaguegothic-regular-webfont.eot?#iefix') format('embedded-opentype'),
         url('includes/webfonts/leaguegothic-regular-webfont.woff') format('woff'),
         url('includes/webfonts/leaguegothic-regular-webfont.ttf') format('truetype'),
         url('includes/webfonts/leaguegothic-regular-webfont.svg#league_gothicregular') format('svg');
    font-weight: normal;
    font-style: normal;
}

/* Condensed */
@font-face {
    font-family: 'League Gothic Condensed';
    src: url('includes/webfonts/leaguegothic-condensed-regular-webfont.eot');
    src: url('includes/webfonts/leaguegothic-condensed-regular-webfont.eot?#iefix') format('embedded-opentype'),
         url('includes/webfonts/leaguegothic-condensed-regular-webfont.woff') format('woff'),
         url('includes/webfonts/leaguegothic-condensed-regular-webfont.ttf') format('truetype'),
         url('includes/webfonts/leaguegothic-condensed-regular-webfont.svg#league_gothic_condensed-Rg') format('svg');
    font-weight: normal;
    font-style: normal;
}

/* Condensed Italic */
@font-face {
    font-family: 'League Gothic Condensed';
    src: url('includes/webfonts/leaguegothic-condensed-italic-webfont.eot');
    src: url('includes/webfonts/leaguegothic-condensed-italic-webfont.eot?#iefix') format('embedded-opentype'),
         url('includes/webfonts/leaguegothic-condensed-italic-webfont.woff') format('woff'),
         url('includes/webfonts/leaguegothic-condensed-italic-webfont.ttf') format('truetype'),
         url('includes/webfonts/leaguegothic-condensed-italic-webfont.svg#league_gothic_condensed_itaRg') format('svg');
    font-weight: normal;
    font-style: italic;
}

/*
google fonts available
font-family: 'Questrial', sans-serif;
font-family: 'Droid Sans', sans-serif;
font-family: 'Lato', sans-serif;
font-family: 'Arvo', serif;
font-family: 'PT Sans', sans-serif;
font-family: 'Quicksand', sans-serif;
font-family: 'Gloria Hallelujah', cursive;
font-family: 'Roboto', sans-serif;
font-family: 'Montserrat', sans-serif;
font-family: 'Open Sans', sans-serif;
*/


/* This is a small security for too long strings titles */
body {
	word-wrap: break-word;
}

/* Alignment */
.alignleft {
	display: inline;
	float: left;
	margin-right: 1.5em;
}
.alignright {
	display: inline;
	float: right;
	margin-left: 1.5em;
}
.aligncenter {
	clear: both;
	display: block;
	margin: 0 auto;
}


/* Images and wp-captions should always fit and be responsive */
img {
	display: inline-block;
	height: auto;
	max-width: 100%;
}
img[class*="wp-image-"] {
	margin-top: 10px;
	margin-bottom: 10px;
}
.wp-caption {
	border: 1px solid #ccc;
	margin-bottom: 10px;
	max-width: 100%;
	border: 1px solid #ccc;
	border-radius: 4px;
	padding: 10px 10px 0;
}
.wp-caption.aligncenter {
	margin-bottom: 10px;
}
.wp-caption img[class*="wp-image-"] {
	margin-top: 0;
	display: block;
}
.wp-caption .wp-caption-text {
	text-align: center;
	margin-top: 10px;
}

/* WP Gallery */
.gallery {
	margin-bottom: 1.5em;
}
.gallery a img {
	border: none;
	height: auto;
	max-width: 90%;
}
.gallery dd {
	margin: 0;
}


/* Make sure embeds and iframes fit their containers */
embed,
iframe,
object {
	max-width: 100%;
}


/* Text meant only for screen readers */
.screen-reader-text {
	clip: rect(1px, 1px, 1px, 1px);
	position: absolute !important;
}

.screen-reader-text:hover,
.screen-reader-text:active,
.screen-reader-text:focus {
	background-color: #f1f1f1;
	border-radius: 3px;
	box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.6);
	clip: auto !important;
	color: #21759b;
	display: block;
	font-size: 14px;
	font-weight: bold;
	height: auto;
	left: 5px;
	line-height: normal;
	padding: 15px 23px 14px;
	text-decoration: none;
	top: 5px;
	width: auto;
	z-index: 100000; /* Above WP toolbar */
}


/* Content */
.main-content-inner {
	padding-bottom: 1.5em;
}

.hentry,
.entry-summary {
	/*margin: 0 0 1.5em; /* switching to Bootstrap '.row' instead */
}

/* Clearing */
.clear {
	clear: both;
}
.noshow {
	display: none;
}

/*---------[ widget styling ]----------*/
.widget { margin-bottom: 2em; }

.widget_nav_menu ul.sub-menu li,
.widget_pages ul.children li { padding-left: 15px; }

/* Hiding the search widget's button in widgets.
*/
.widget_search .search-form input[type="submit"] { display: none; }

/* Make sure select elements fit in widgets */
.widget select {
	max-width: 100%;
}

.comment .children { margin-left: 1.5em; }

.sticky header .entry-meta:after {
	content: '\f08d';
 	display:inline-block;
 	float:right;
 	font:normal normal normal 14px/1 FontAwesome;
 	font-size:inherit;text-rendering:auto;
 	-webkit-font-smoothing:antialiased;
 	-moz-osx-font-smoothing:grayscale;
}

.bypostauthor .panel-heading .media-heading:after { 
 	content: '\f007  Author';
 	display:inline-block;
 	float:right;
 	font:normal normal normal 14px/1 FontAwesome;
 	font-size:inherit;text-rendering:auto;
 	-webkit-font-smoothing:antialiased;
 	-moz-osx-font-smoothing:grayscale;
 }

.gallery-caption {
	font-family: 'Montserrat', sans-serif;
}


/*
------------------------------------------------------------------
	HEADER, MENU, SEARCH
------------------------------------------------------------------
*/

/*--------------------------[ WP ADMIN BAR FIXES ]-----------------------------------*/
@media screen and (min-width: 783px) {
	body.admin-bar .navbar-fixed-top {
		top: 31px;
	}
	body.admin-bar #page-content-wrapper {
		margin-top: 51px;
	}
}
@media screen and (min-width: 601px) and (max-width: 782px) {
	body.admin-bar .navbar-fixed-top {
		top: 45px;
	}
	body.admin-bar #page-content-wrapper {
		margin-top: 51px;
	}
}


/*--------------------------[ SEARCH FORM ]-----------------------------------*/

nav .navbar-form.navbar-right {
	padding-right: 0;
}
/* fix for overlap */
@media screen and (min-width: 768px) {
  .navbar-nav.navbar-right {
    float: left !important;
  }
  .navbar-nav.navbar-right {
    float: left !important;
  }
  .navbar-form.navbar-right:last-child {
    padding-right: 15px;
  }
}

/*--------------------[ LOGOS ]---------------------*/

.mobilelogo {
	display: none;
}
.mobilelogo img {
	max-height: 50px;
}

.desktoplogo {
	display: block;
	padding-top: 10px;
	padding-bottom: 10px;
}

